--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,11 @@
             <artifactId>webcam-capture</artifactId>
             <version>0.3.9</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
